--- a/config/database.yml
+++ b/config/database.yml
@@ -20,19 +20,17 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  username: kaiako
+  password: '*UHBvcxzAQ!'
 
 development:
   <<: *default
-  database: kai-ako_development
+  database: kaiako_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: kaiako
-
-  # The password associated with the postgres role (username).
-  password: '*UHBvcxzAQ!'
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,7 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: kai-ako_test
+  database: kaiako_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +78,6 @@ test:
 #
 production:
   <<: *default
-  database: kai-ako_production
-  username: kai-ako
+  database: kaiako_production
+  username: kaiako
   password: <%= ENV['KAI-AKO_DATABASE_PASSWORD'] %>
